--- a/package.json
+++ b/package.json
@@ -2,14 +2,60 @@
   "name": "react-redux-example",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.8.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "compression": "^1.7.3",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-react": "^7.10.0",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "open-browser-webpack-plugin": "^0.0.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "path": "^0.12.7",
+    "react-hot-loader": "^4.3.3",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.4",
+    "workbox-webpack-plugin": "^3.4.1"
+  },
   "dependencies": {
+    "antd": "^3.7.1",
+    "copy-to-clipboard": "^3.0.8",
+    "js-cookies": "^1.0.4",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "react-scripts": "2.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack-dev-server --config ./webpack/dev/babel.client.dev.js",
+    "start:dash": "webpack-dashboard -- webpack-dev-server --config ./webpack/dev/babel.client.dev.js",
+    "server": "node src/server",
+    "build": "rm -rf dist && webpack --config ./webpack/prod/babel.client.prod.js --progress --colors",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
